Migrate to google-genai SDK 1.0+

--- a/custom_components/ha_genie/manifest.json
+++ b/custom_components/ha_genie/manifest.json
@@ -9,7 +9,7 @@
   "documentation": "https://github.com/martinbrose/ha_genie",
   "iot_class": "cloud_polling",
   "requirements": [
-    "google-generativeai==0.3.2"
+    "google-genai>=1.0.0"
   ],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
